# LoL-Cheat-POC

./: CMakeLists.txt  README.md  build.gradle  conanfile.txt  settings.gradle
com/vmaster/: Hero.cpp  Hero.h  LeagueMemoryReader.cpp  LeagueMemoryReader.h  MemSnapshot.h  Offsets.cpp  Offsets.h  ScreenData.cpp  ScreenData.h  Utils.cpp  Utils.h  Vector.h  main.cpp
data/: a.fnt  b.fnt  font.fnt
libs/modern-cpp-kafka/: .gitignore
libs/modern-cpp-kafka/doc/: CMakeLists.txt  HowToMakeKafkaProducerReliable.md
libs/modern-cpp-kafka/tools/: KafkaConsoleConsumer.cc
src/main/java/com/example/kafkatesting/: KafkaTestingApplication.java
src/main/java/com/example/kafkatesting/config/: Config.java
src/main/java/com/example/kafkatesting/game/: GameContext.java
src/main/java/com/example/kafkatesting/kafka/: KafkaConsumer.java
src/main/java/com/example/kafkatesting/kafka/config/: KafkaConfiguration.java
src/main/java/com/example/kafkatesting/model/: Entity.java  GameMemory.java  GameRender.java  Vec2f.java  Vec3f.java
src/main/java/com/example/kafkatesting/ui/: Event.java  Overlay.java  OverlayEvent.java  OverlayRenderer.java  OverlaySetup.java  Window.java
src/main/java/com/example/kafkatesting/ui/transparency/: TransparencyApplication.java  TransparencyApplier.java
src/main/java/com/example/kafkatesting/ui/transparency/win10/: AccentPolicy.java  AccentState.java  Win10TransparencyApplier.java  WindowCompositionAttribute.java  (+1 more)
src/main/resources/: application.properties
src/test/java/com/example/kafkatesting/: KafkaTestingApplicationTests.java
